--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
 </body>
 </body>
     <div id="timer"></div> <!-- Display timer -->
+    <p style="color: red;">You can only see your score after "Time up", i.e., within 3 hours of visiting the site.</p>
+    <p style="color: red;">After the exam is finished, you can see your performance and answer key below each question.</p>
+    <p style="color: red;">To leave the current test and give the test again now, just refresh the web page.</p>
     <h2>Best of Luck, Start Here !</h2>
     <form id="quizForm">
         <ol>
